{{$NEXT}}

v0.1.11   2013-01-16 17:05:57 America/Chicago
    - Updated bundled list to latest version.

v0.1.10   2012-10-08 21:39:28 America/Chicago
    - Permitted domains to have a leading digit per RFC 1123.

v0.1.9    2012-10-08 21:34:26 America/Chicago
    - Removed dependency on Regexp::Common, as it is relying on a supersceded
      RFC for its domain name regular expression.
    - Updated bundled list to latest version (revision 12b5f4b2f299).

v0.1.8    2012-08-29 14:06:38 America/Chicago
    - Updated bundled list to latest version.
    - Adjusted .jp tests to match new list rules.
    - Abandoned awful lispish syntax experiment (sorry).
    - Changed default for downloading new public suffix list on install to "no."

v0.1.7    2012-06-28 08:46:41 America/Chicago
    - Untabified.
    - Readded excluded author/release tests.
    - Updated bundled list to latest version.
    - Changed license to MIT.

v0.1.6    2012-03-31 17:28:34 America/Chicago
    - Updated bundled list to latest version.

v0.1.5    2012-03-19 14:57:20 America/Chicago
    - Explicitly declared configure_requires module not added to core until
      Perl v5.14.

v0.1.4    2012-03-14 10:35:21 America/Chicago
    - Remove undeclared core dependency; "parent" not added until Perl v5.10.1

v0.1.3    2012-03-13 00:39:30 America/Chicago
    - Gave up a little speed to validate well-formedness of domain.
    - Via well-formedness validation, re-added croaking for domains with leading
      dots.

v0.1.2    2012-03-12 19:25:09 America/Chicago
    - Algorithm optimized further-still.
    - Removed rule causing a croak on domains with a leading dot.

v0.1.1    2012-03-11 18:01:25 America/Chicago
    - Double speed by using &lc instead of &idn_prep_name

v0.1.0    2012-03-11 15:06:18 America/Chicago
    - Fixed handling of exception rules.

v0.0.2    2012-03-06 16:44:35 America/Chicago
    - Added frivolous microptimizations.
    - Promoted to full release.
