@@ -3,7 +3,7 @@ author           = Richard Simões <rsimoes AT cpan DOT org>
 license          = MIT
 copyright_holder = Richard Simões
 copyright_year   = 2013
-version          = v0.1.11
+version          = v0.1.12
 
 [@Filter]
 -bundle = @Basic
